<resources>
    <string name="app_name">Personal Finance</string>

    <!-- custom strings -->
    <string name="groups_name">Grupos</string>
    <string name="balances_name">Saldos</string>
    <string name="agends_name">Agenda</string>
    <string name="movements_name">Movimento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_edit_name">Editar Grupo</string>

</resources>