<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:layout_above="@+id/bottom_navigation"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:id="@+id/icon_groups"
                android:src="@drawable/group_icon"
                app:tint="@color/enabled_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_groups"
                android:text="@string/groups_name"
                android:textSize="11sp"
                android:gravity="center"
                android:textColor="@color/enabled_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:id="@+id/icon_balances"
                android:src="@drawable/ic_pocket"
                app:tint="@color/enabled_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_balances"
                android:text="@string/balances_name"
                android:textSize="11sp"
                android:gravity="center"
                android:textColor="@color/enabled_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:id="@+id/icon_agenda"
                android:src="@drawable/ic_calendar"
                app:tint="@color/enabled_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_calendar"
                android:text="@string/agends_name"
                android:textSize="11sp"
                android:gravity="center"
                android:textColor="@color/enabled_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:id="@+id/icon_movements"
                android:src="@drawable/ic_movto"
                app:tint="@color/enabled_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_movto"
                android:text="@string/movements_name"
                android:textSize="11sp"
                android:gravity="center"
                android:textColor="@color/enabled_icon"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
